# game-backend

./: .gitpod.dockerfile  .gitpod.yml  Dockerfile  anifi.code-workspace  build.sh  collectstatic.sh  db.sqlite3  entrypoint.sh  example.env  modelss.py  pyproject.toml  render.yaml  requirements.txt  table_schema.txt
abi/: Reward.json
app/: auth.py  constants.py  settings.py  urls.py
base/: admin.py  models.py  serializers.py  urls.py  views.py  web3.py
base/migrations/: 0001_initial.py
heroes/: admin.py  models.py  serializers.py  urls.py  views.py
heroes/migrations/: 0001_initial.py  0002_alter_herouser_nft_id.py  0003_auto_20220627_1205.py  0004_alter_gemuser_hero.py  0005_remove_herouser_gem_slot5_expire_datetime.py  0006_remove_herouser_level.py  0007_gem_is_off_chain_gem_price.py  0008_heroonchain_itembalance_herooffchain_and_more.py  0009_alter_herooffchain_options_alter_heroonchain_options.py  0010_heroinfo_remove_heroonchaindetail_hero_on_chain_and_more.py  0011_alter_heroinfo_options.py  0012_heroinfo_hero_heroinfo_is_on_chain_heroinfo_rank_and_more.py  0013_heroinfo_owner.py  0014_alter_heroinfo_rank.py  0015_alter_gem_attribute_alter_gemuser_gem_and_more.py  0016_rename_hero_herotype.py  0017_herouser_remove_herooffchain_hero_and_more.py  (+15 more)
items/: admin.py  models.py  serializers.py  urls.py  views.py
metaMaskAuth/: serializers.py  utils.py
nfts/: admin.py  models.py  serializers.py  urls.py  views.py
players/: admin.py  models.py  serializers.py  urls.py  views.py
stages/: admin.py  models.py  serializers.py  urls.py  views.py
(+32 files in other folders)
